# AVS_HW2

./: CMakeLists.txt  README.md  cartoon.cpp  cartoon.h  container.cpp  container.h  documentary.cpp  documentary.h  fiction.cpp  fiction.h  main.cpp  movie.h  rnd.h
Reports/: report.txt
Results/: outfile01.txt
Tests/: test1.txt  test2.txt  test3.txt
